package S191220142.task3;

import S191220142.task3.Matrix.Position;

public interface Linable {

    public void setPosition(Position position);

    public Position getPosition();

    public int getValue();

}
